css/styles.css
body {
  background-color: #51B2B1;
}
.main-photo-title {
  display: block;
  text-align: center;
  margin: 20px;
}

.img-rounded {
  height: 300px;
  width: 200px;
}

blockquote {
  text-align: center;
  height: 100px;
  width: 400px;
  margin-left: 300px;
}

em {
  color: #ffbeb8;
}

.col-md-4 {
  margin: 2px;
  width: 300px;
  height: 150px;
}

.row {
  text-align: center;
  padding-left: 100px;
}

#col-1 {
  background: #f25041;
  font-weight: bold;
}

#col-2 {
  background: #6056ea;
  font-weight: bold;
}

#col-3 {
  background: #40ed99;
  font-weight: bold;
}

.row a {
  color: black;
}

.dance-photo {
  display: block;
  margin: auto;
  height: 350px;
  width: 220px;
}

